# jackIRC

./: CMakeLists.txt  LICENSE
doc/: notes
includes/: jackirc.h
srcs/: handle_message.c  main.c  tools.c
